# proton-drive-bridge

./: .gitignore  Cargo.toml  Dockerfile  README.md  users.json
.cargo/: config.toml
.github/workflows/: deploy.yml
bridge/: Cargo.toml
bridge/src/: cli.rs  config.rs  keyring.rs  main.rs  vault.rs
bridge/src/app/: mod.rs  none.rs  proton_login_page.rs  session_page.rs
bridge/src/app/server_page/: mod.rs  running.rs  settings.rs
bridge/src/keyring/: keyring_local.rs  mod.rs
docker/: bridge.Dockerfile  docker-compose.yml
pmapi/: Cargo.toml
pmapi/src/: consts.rs  errors.rs  lib.rs  uids.rs
pmapi/src/client/: authenticator.rs  cache.rs  crypto.rs  mod.rs  nodes.rs  pdclient.rs  photos.rs  session_store.rs  shares.rs
pmapi/src/remote/: api_session.rs  auth.rs  downloader.rs  mod.rs  nodes.rs  payloads.rs  photos.rs  shares.rs  upload.rs  worker.rs
unftp-sbe-pd/: Cargo.toml
unftp-sbe-pd/src/: ext.rs  factory.rs  lib.rs  worker.rs
