[package]
name = "pmapi"
version = "0.1.0"
edition = "2024"
description = "An API to access files on Proton Drive"
authors = [ "https://github.com/LLeny" ]
keywords = ["protondrive", "proton-drive"]
repository = "https://github.com/LLeny/proton-drive-bridge"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
serde-aux = { workspace = true }
tokio = { workspace = true }
itertools = { workspace = true }
reqwest = { version = "0.12.23", features = [ "json", "blocking", "multipart" ] }
proton-srp = { workspace = true }
proton-crypto = { workspace = true }
proton-crypto-account = { workspace = true }
base64 = { version = "0.22.1" }
derivative = { version = "2.2.0" }
sha2 = { version = "0.10.9" }
sha1 = { version = "0.10.6" }
elsa = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
mime_guess = { version = "2.0.5" }
hmac = { version = "0.12.1" }
hex = { version = "0.4.3" }
rand = { version = "0.9.2" }
serde_json = { version = "1.0.143" }
chrono = { version = "0.4.42" }

[lints]
workspace = true
