[package]
name = "unftp-sbe-pd"
version = "0.4.3"
rust-version = "1.90"
edition = "2024"
description = "A FTP server based on libunftp, storing files on Proton Drive"
authors = [ "https://github.com/LLeny" ]
keywords = ["libunftp", "unftp", "ftp", "ftps", "protondrive", "proton-drive"]
repository = "https://github.com/LLeny/proton-drive-bridge"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
pmapi = { path = "../pmapi" }
libunftp = { workspace = true }
tokio = { workspace = true }
proton-crypto = { workspace = true }
elsa = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
